# axum_surrealdb_ai_template

./: .gitignore  Cargo.toml  LICENSE  README.md  settings.toml
src/: lib.rs  log.rs  main.rs  state.rs
src/config/: backend.rs  db.rs  frontend.rs  jwt.rs  mod.rs
src/db/: init.rs  mod.rs  prepare.rs
src/dtos/: token.rs  user.rs
src/errors/: db.rs  http.rs  jwt.rs  mod.rs  password.rs  redis.rs  surreal.rs
src/handlers/: auth.rs
src/middlewares/: cors.rs
src/models/: token.rs  user.rs
src/routes/: auth.rs  mod.rs  protected.rs  public.rs
src/utils/: password.rs  token.rs
