[package]
name = "axum_surrealdb_ai_template"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
figment = "0.10.19"
jsonwebtoken = "9.3.1"
lettre = "0.11.18"
openssl = "0.10.73"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
surrealdb = "2.3.7"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = "0.6.6"
tower_governor = { version = "0.7.0", features = ["tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
